[gd_scene load_steps=3 format=3 uid="uid://dq8civm3okl53"]

[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_3l1ko"]
[ext_resource type="FontFile" uid="uid://c5cvl5iqxk5b4" path="res://font/PressStart2P-Regular.ttf" id="1_bfrj4"]

[node name="PauseMenu" type="Control"]
custom_minimum_size = Vector2(500, 200)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -100.0
offset_right = 250.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_3l1ko")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(500, 200)
layout_mode = 1
offset_right = 500.0
offset_bottom = 200.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -24.0
offset_right = 176.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_bfrj4")
theme_override_font_sizes/font_size = 20
text = "Game Paused"

[node name="HBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Resume" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_bfrj4")
text = "Resume"

[node name="Reset" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_bfrj4")
text = "Reset"

[node name="Menu" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_bfrj4")
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Menu" to="." method="_on_menu_pressed"]
